--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Lit + TS</title>
-    <link rel="stylesheet" href="./src/index.css" />
-    <script type="module" src="/src/index.ts"></script>
+    <title>Lit</title>
+    <link rel="stylesheet" href="./src/index.scss" />
+    <script type="module" src="/src/components/my.element.ts"></script>
   </head>
   <body>
     <my-element>
-      <h1>Vite + Lit</h1>
+      <h1>Vite + Lit + TailwindCSS</h1>
     </my-element>
   </body>
 </html>
