--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lit</title>
     <link rel="stylesheet" href="./src/index.scss" />
-    <script type="module" src="/src/components/my.element.ts"></script>
+    <script type="module" src="./src/components/my.element.ts"></script>
   </head>
   <body>
     <my-element>
-      <h1>Vite + Lit + TailwindCSS</h1>
+      <h1>Vite + Lit + TailwindCSS + Redux</h1>
     </my-element>
   </body>
 </html>
